fix(dialog): change dialog-body overflow, add thy-dialog-content #247676 if you open a custom component, should add thy-dialog-content class to host element

--- a/src/dialog/styles/dialog.scss
+++ b/src/dialog/styles/dialog.scss
@@ -16,6 +16,11 @@
     background: $white;
 }
 
+.thy-dialog-content {
+    @extend .d-flex-column-fill;
+    overflow: hidden;
+}
+
 // Dialog header
 // Top section of the modal w/ title and dismiss
 .dialog-header {
@@ -48,6 +53,7 @@
 
 .dialog-body {
     position: relative;
+    overflow: auto;
     flex: 1 1 auto;
     padding: $dialog-body-padding;
     display: block;
